force-app/main/default/objects/Cross_Selling__c/Cross_Selling__c.object-meta.xml
<CustomObject>
    <label>Cross Selling</label>
    <nameField>
        <label>cross Selling Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cross Sellings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>