force-app/main/default/objects/Cross_Selling__c/fields/Discount1__c.field-meta.xml
<CustomField>
    <fullName>Discount1__c</fullName>
    <label>Discount1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>