force-app/main/default/objects/Cross_Selling__c/fields/Discount2__c.field-meta.xml
<CustomField>
    <fullName>Discount2__c</fullName>
    <label>Discount2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>