force-app/main/default/objects/Cross_Selling__c/fields/Master_Parent__c.field-meta.xml
<CustomField>
    <fullName>Master_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Parent</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>cross_Sellings</relationshipName>
    <type>Lookup</type>
</CustomField>