force-app/main/default/objects/Cross_Selling__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <displayFormat>BDT-{00000}</displayFormat>
    <label>Base Document Template Name</label>
    <type>AutoNumber</type>
</CustomField>