force-app/main/default/objects/Cross_Selling__c/fields/Product1__c.field-meta.xml
<CustomField>
    <fullName>Product1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product1</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>cross_Sellings1</relationshipName>
    <type>Lookup</type>
</CustomField>