force-app/main/default/objects/Cross_Selling__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product2</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>cross_Sellings2</relationshipName>
    <type>Lookup</type>
</CustomField>